# expense-tracker

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  pyproject.toml  requirements.txt
backend/: database.py  main.py  models.py  schemas.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/auth/: otp.py  router.py  session.py  smtp.py
backend/app/routes/: expenses.py
backend/routes/: auth.py  expenses.py
backend/utils/: email_sender.py
database/: db.py
frontend/: app.py  expenses.py  login.py  view_expenses.py
models/: models.py
services/: auth_service.py  expense_service.py
ui/: app.py
