[tool.poetry]
name = "expense-tracker"
version = "0.1.0"
description = "Group expense tracker with FastAPI, Streamlit, PostgreSQL and OTP auth"
authors = ["Akanksha"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.0.0"
python-dotenv = "^1.0.0"
streamlit = "^1.33.0"
plotly = "^5.20.0"
requests = "^2.31.0"
pyotp = "^2.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"